# MatrixForge

./: .gitignore  README.md  pyproject.toml
matrixcalc/: __init__.py  addition.py  determinant.py  identity.py  multiplication.py  scalar_multiplication.py  subtraction.py  transpose.py
tests/: test_addition.py  test_determinant.py  test_identity.py  test_import.py  test_multiplication.py  test_scalar_multiplication.py  test_subtraction.py  test_transpose.py
